==> conservationtechlab/tinyscrubcam/googleCoralBuild/googleCoral/coralmicro/third_party/nxp/rt1176-sdk/middleware/wiced/43xxx_Wi-Fi/WICED/platform/MCU/PSoC6/peripherals/platform_i2c.c <==
#include "stdint.h"
#include "string.h"
#include "platform_peripheral.h"
#include "platform_isr.h"
#include "platform_isr_interface.h"
#include "wwd_rtos.h"
#include "wwd_assert.h"
#include "wiced_platform.h"
#define I2C_START_FLAG             (1U << 0)
#define I2C_STOP_FLAG              (1U << 1)
#define I2C_RW_BIT                 (0x1)
#define PLATFORM_I2C_CHANNEL_MAX   8
#define PLATFORM_I2C_PIN_INDEX_MAX 8
#define PLATFORM_I2C_PIN_PORT_MAX  15
#define I2C_PDL_TIMEOUT            (20)     /* in milliseconds */
#define I2C_PDL_START_TIMEOUT      I2C_PDL_TIMEOUT
#define I2C_PDL_STOP_TIMEOUT       I2C_PDL_TIMEOUT
#define I2C_PDL_WRITE_TIMEOUT      I2C_PDL_TIMEOUT
#define I2C_PDL_READ_TIMEOUT       I2C_PDL_TIMEOUT
#define PERI_CLOCK_HZ              (100000000)
#define PERI_CLOCK_KHZ             (100000)

static platform_result_t platform_psoc_i2c_init( const platform_i2c_t* i2c, const platform_i2c_config_t* config )
{

    CySCB_Type* scb_base;
    cy_stc_scb_i2c_context_t* context;
    cy_en_scb_i2c_status_t status;
    cy_stc_scb_i2c_config_t psoc_config = {'\0'};
    const scb_i2c_clockrate_config_t* clkcfg;
    uint32_t data_rate;
    platform_result_t result;

    if ( ( i2c == NULL ) || ( config == NULL ) )
    {
        wiced_assert( "bad argument", 0 );
        return PLATFORM_ERROR;
    }

    scb_base = i2c->scb->scb_base;
    context  = &scb_context[i2c->port];

    if ( scb_base == NULL )
    {
        return PLATFORM_ERROR;
    }

    if ( ( ( config->flags & I2C_DEVICE_NO_DMA ) == 0 ) || ( config->address_width != I2C_ADDRESS_WIDTH_7BIT ) )
    {
        return PLATFORM_UNSUPPORTED;
    }

    /* Configure I2C SCL and SDA pin mapping */
    if ( platform_i2c_scl_pin_init( i2c->port, i2c->scl_pin ) != PLATFORM_SUCCESS )
    {
        return PLATFORM_UNSUPPORTED;
    }

    if ( platform_i2c_sda_pin_init( i2c->port, i2c->sda_pin ) != PLATFORM_SUCCESS )
    {
        return PLATFORM_UNSUPPORTED;
    }

    switch ( config->speed_mode )
    {
        case I2C_LOW_SPEED_MODE:    /* 10Khz devices */
            return PLATFORM_UNSUPPORTED;

        case I2C_STANDARD_SPEED_MODE:    /* 100Khz devices */
            data_rate = 100000u;
            break;

        case I2C_HIGH_SPEED_MODE:    /* 400Khz devices */
            data_rate = 400000u;
            break;

        default:
            return PLATFORM_BADARG;
    }

    clkcfg = platform_i2c_clockrate_config( data_rate );

    if ( clkcfg == NULL )
    {
        return PLATFORM_ERROR;
    }

    result = platform_peripheral_clock_init( i2c->scb->pclk, clkcfg->divider, 0 );

    if ( result != PLATFORM_SUCCESS )
    {
        return PLATFORM_ERROR;
    }

    Cy_SCB_I2C_Disable( scb_base, context );

    /* Setup Master Mode */
    psoc_config.i2cMode = CY_SCB_I2C_MASTER;

    status = Cy_SCB_I2C_Init( scb_base, &psoc_config, context );

    if ( status != CY_SCB_I2C_SUCCESS )
    {
        return PLATFORM_ERROR;
    }

    Cy_SCB_I2C_SetDataRate( scb_base, data_rate, ( PERI_CLOCK_HZ / ( clkcfg->divider + 1 ) ) );

    Cy_SCB_I2C_Enable( scb_base );

    return PLATFORM_SUCCESS;
}

static platform_result_t platform_psoc_i2c_deinit( const platform_i2c_t* i2c, const platform_i2c_config_t* config )
{
    CySCB_Type* scb_base;
    cy_stc_scb_i2c_context_t* context;

    if ( ( i2c == NULL ) || ( config == NULL ) )
    {
        wiced_assert( "bad argument", 0 );
        return PLATFORM_ERROR;
    }

    scb_base = i2c->scb->scb_base;
    context  = &scb_context[i2c->port];

    if ( scb_base == NULL )
    {
        return PLATFORM_ERROR;
    }

    Cy_SCB_I2C_Disable( scb_base, context );

    Cy_SCB_I2C_DeInit( scb_base );

    return PLATFORM_SUCCESS;
}

static platform_result_t platform_psoc_i2c_transfer( const platform_i2c_t* i2c, const platform_i2c_config_t* config,
                                                     uint16_t flags, void* buffer, uint16_t buffer_length, i2c_io_fn_t* fn )
{
    uint8_t i2c_flags = 0;

    if ( ( flags & ( WICED_I2C_START_FLAG | WICED_I2C_REPEATED_START_FLAG ) ) != 0 )
    {
        i2c_flags |= I2C_START_FLAG;
    }
    if ( ( flags & WICED_I2C_STOP_FLAG ) != 0 )
    {
        i2c_flags |= I2C_STOP_FLAG;
    }

    return ( *fn )( i2c, config, i2c_flags, buffer, buffer_length );
}

platform_result_t platform_i2c_init( const platform_i2c_t* i2c, const platform_i2c_config_t* config )
{
    platform_result_t result;

    wiced_assert( "bad argument", ( i2c != NULL ) && ( i2c_driver != NULL ) && ( config != NULL )
                  && ( config->flags & I2C_DEVICE_USE_DMA ) == 0);

    result = i2c_driver->init( i2c, config );

    return result;
}

platform_result_t platform_i2c_deinit( const platform_i2c_t* i2c, const platform_i2c_config_t* config )
{
    platform_result_t result;

    wiced_assert( "bad argument", ( i2c != NULL ) && ( i2c_driver != NULL ) && ( config != NULL ) );

    result = i2c_driver->deinit( i2c, config );

    return result;
}

platform_result_t platform_i2c_transfer( const platform_i2c_t* i2c, const platform_i2c_config_t* config,
                                         platform_i2c_message_t* messages, uint16_t number_of_messages )
{
    platform_result_t result = PLATFORM_SUCCESS;
    uint32_t          message_count;
    uint32_t          retries;

    /* Check for message validity. Combo message is unsupported */
    for ( message_count = 0; message_count < number_of_messages; message_count++ )
    {
        if ( messages[message_count].rx_buffer != NULL && messages[message_count].tx_buffer != NULL )
        {
            return PLATFORM_UNSUPPORTED;
        }

        if ( ( messages[message_count].tx_buffer == NULL && messages[message_count].tx_length != 0 )  ||
             ( messages[message_count].tx_buffer != NULL && messages[message_count].tx_length == 0 )  ||
             ( messages[message_count].rx_buffer == NULL && messages[message_count].rx_length != 0 )  ||
             ( messages[message_count].rx_buffer != NULL && messages[message_count].rx_length == 0 )  )
        {
            return PLATFORM_BADARG;
        }

        if ( messages[message_count].tx_buffer == NULL && messages[message_count].rx_buffer == NULL )
        {
            return PLATFORM_BADARG;
        }
    }

    for ( message_count = 0; message_count < number_of_messages; message_count++ )
    {
        for ( retries = 0; retries < messages[message_count].retries; retries++ )
        {
            if ( messages[message_count].tx_length != 0 )
            {
                result = i2c_driver->write( i2c, config, I2C_START_FLAG | I2C_STOP_FLAG,
                                            (uint8_t*) messages[message_count].tx_buffer,
                                            messages[message_count].tx_length );

                if ( result == PLATFORM_SUCCESS )
                {
                    /* Transaction successful. Break from the inner loop and continue with the next message */
                    break;
                }
            }
            else if ( messages[message_count].rx_length != 0 )
            {
                result = i2c_driver->read( i2c, config, I2C_START_FLAG | I2C_STOP_FLAG,
                                           (uint8_t*) messages[message_count].rx_buffer,
                                            messages[message_count].rx_length );

                if ( result == PLATFORM_SUCCESS )
                {
                    /* Transaction successful. Break from the inner loop and continue with the next message */
                    break;
                }
            }
        }

        /* Check if retry is maxed out. If yes, return immediately */
        if ( retries == messages[message_count].retries && result != PLATFORM_SUCCESS )
        {
            result = PLATFORM_ERROR;
            break;
        }
    }

    return result;
}
