==> conservationtechlab/tinyscrubcam/googleCoralBuild/googleCoral/coralmicro/third_party/nxp/rt1176-sdk/middleware/wiced/43xxx_Wi-Fi/WICED/platform/MCU/SAM4S/peripherals/platform_i2c.c <==
#include "stdint.h"
#include "string.h"
#include "platform_peripheral.h"
#include "platform_isr.h"
#include "platform_isr_interface.h"
#include "wwd_rtos_isr.h"
#include "wwd_assert.h"
#define I2C_TRANSACTION_TIMEOUT        (1000)

platform_result_t platform_i2c_init( const platform_i2c_t* i2c, const platform_i2c_config_t* config )
{
    platform_result_t result;
    twi_options_t     twi_slave_config;

    if ( i2c_runtime_data_inited == WICED_FALSE )
    {
        /* Initialise when this function is first called */
        memset( &i2c_runtime_data, 0, sizeof( i2c_runtime_data ) );
        i2c_runtime_data_inited = WICED_TRUE;
    }

    /* Initialise transfer complete semaphore */
    result = host_rtos_init_semaphore( &i2c_runtime_data[ i2c->i2c_block_id ].transfer_complete );
    if ( result != PLATFORM_SUCCESS )
    {
        wiced_assert("Semaphore initialization has failed", result == PLATFORM_SUCCESS);
        return result;
    }

    /* Setup SAM4S pins */
    platform_gpio_init( i2c->sda_pin, OUTPUT_OPEN_DRAIN_PULL_UP );
    platform_gpio_init( i2c->scl_pin, OUTPUT_OPEN_DRAIN_PULL_UP );
    platform_gpio_peripheral_pin_init( i2c->sda_pin, ( IOPORT_MODE_MUX_A | IOPORT_MODE_PULLUP ) );
    platform_gpio_peripheral_pin_init( i2c->scl_pin, ( IOPORT_MODE_MUX_A | IOPORT_MODE_PULLUP ) );

    /* Enable the peripheral clock in the PMC. */
    sysclk_enable_peripheral_clock( i2c->peripheral_id );

    /* Configure and enable interrupt for TWI peripheral on the cpu core */
    /* Priority must be set in platform.c file function platform_init_peripheral_irq_priorities */
    if ( i2c->peripheral_id == ID_TWI0 )
    {
        NVIC_EnableIRQ( TWI0_IRQn );
    }
    else if ( i2c->peripheral_id == ID_TWI1 )
    {
        NVIC_EnableIRQ( TWI1_IRQn );
    }

    twi_enable_master_mode( i2c->peripheral );

    wiced_assert( "Device address other than 7 bits is not supported currenly", config->address_width == I2C_ADDRESS_WIDTH_7BIT );

    twi_slave_config.chip = (uint8_t) config->address;
    switch ( config->speed_mode )
    {
        case I2C_LOW_SPEED_MODE     : twi_slave_config.speed = 10000;  break;
        case I2C_STANDARD_SPEED_MODE: twi_slave_config.speed = 100000; break;
        case I2C_HIGH_SPEED_MODE    : twi_slave_config.speed = 400000; break;
        default                     : wiced_assert("Speed mode is not supported", 0 != 0); break;
    }

    twi_slave_config.master_clk = CPU_CLOCK_HZ;
    twi_slave_config.smbus      = 0;
    twi_master_init(i2c->peripheral, &twi_slave_config);

    i2c_runtime_data->peripheral = i2c;
    i2c_runtime_data->i2c_inited = WICED_TRUE;

    return PLATFORM_SUCCESS;
}

platform_result_t platform_i2c_deinit( const platform_i2c_t* i2c, const platform_i2c_config_t* config )
{
    memset( &i2c_runtime_data[i2c->i2c_block_id], 0x00, sizeof( sam4s_i2c_runtime_data_t ) );
    i2c_runtime_data->i2c_inited = WICED_FALSE;
    return PLATFORM_SUCCESS;
}

platform_result_t platform_i2c_transfer( const platform_i2c_t* i2c, const platform_i2c_config_t* config, platform_i2c_message_t* messages, uint16_t number_of_messages )
{
    platform_result_t       result   =  PLATFORM_SUCCESS;
    Twi*                    twi      = ( Twi* )( i2c_runtime_data[i2c->i2c_block_id].peripheral->peripheral );
    platform_i2c_message_t* message_pointer;

    int i;
    int retry_count;

    /* Check input arguments */
    wiced_assert("Bad argument", (i2c != NULL) && ( config != NULL ) &&( messages != NULL ) && ( number_of_messages != 0 ));

    for ( i = 0; ( i < number_of_messages ) && ( result == PLATFORM_SUCCESS ); i++ )
    {
        message_pointer = &messages[i];
        wiced_assert("Message pointer shouldn't be null", message_pointer != NULL);

        for ( retry_count = 0; retry_count < message_pointer->retries; retry_count++ )
        {
            i2c_runtime_data[i2c->i2c_block_id].current_message = message_pointer;
            i2c_runtime_data[i2c->i2c_block_id].data_count      = 0;
            i2c_runtime_data[i2c->i2c_block_id].transfer_status = 0;

            /* Make sure all interrupts are disables at start */
            twi->TWI_IDR = ~0UL;

            if ( message_pointer->rx_buffer != NULL )
            {
                /* Initiate an RX transfer */
                /* Set read mode and slave address */
                twi->TWI_MMR = 0;
                twi->TWI_MMR = TWI_MMR_MREAD | TWI_MMR_DADR(config->address);

                /* Enable NACK, RXRDY interrupts */
                twi->TWI_IER = TWI_IER_NACK | TWI_IER_RXRDY;

                if ( message_pointer->rx_length == 1 )
                {
                    /* There is only byte to process, go straight to transfer complete
                     * interrupt, and process the last byte there */
                    twi->TWI_IDR = TWI_IDR_RXRDY;
                    twi->TWI_IER = TWI_IER_TXCOMP;

                    /* Extract from sam4s user manual.
                     * When a single data byte read is performed, with or without internal address (IADR),
                     * the START and STOP bits must be set at the same time */
                    twi->TWI_CR = TWI_CR_STOP | TWI_CR_START;
                }
                else
                {
                    /* Only required for receive to reset TXCOMP state */
                    twi->TWI_CR = TWI_CR_START;
                }

            }
            else if ( message_pointer->tx_buffer != NULL )
            {
                /* Initiate a TX transfer */
                /* Set write mode, slave address */
                twi->TWI_MMR = 0;
                twi->TWI_MMR = TWI_MMR_DADR(config->address);

                if ( message_pointer->tx_length == 1 )
                {
                    /* Set data count to 1 and send in interrupt routine */
                    i2c_runtime_data[i2c->i2c_block_id].data_count = 1;
                }
                /* Interrupts will trigger as soon as enabled (tx is ready ) */
                twi->TWI_IER = TWI_IER_NACK | TWI_IER_TXRDY;

            }
            else
            {
                /* Combined transaction is not supported currently */
                wiced_assert("Combined transactions are not supported on sam4s twi", 0!=0);
                return WICED_ERROR;
            }

            /* Wait on a semaphore until a message is received or transmitted */
            result = host_rtos_get_semaphore( &i2c_runtime_data[i2c->i2c_block_id].transfer_complete, I2C_TRANSACTION_TIMEOUT, WICED_TRUE );
            if ( ( result == PLATFORM_SUCCESS ) && ( i2c_runtime_data[i2c->i2c_block_id].transfer_status != -1 ) )
            {
                break;
            }

        }
    }

    return result;
}
